syntax = "proto3";

option go_package = "github.com/artnikel/BalanceService/bproto";

message Balance {
    string balanceid = 1;
    string profileid = 2;
    double operation = 3;
}

service BalanceService {
    rpc BalanceOperation(BalanceOperationRequest) returns (BalanceOperationResponse);
    rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
}

message BalanceOperationRequest{
    Balance balance = 1;
}

message BalanceOperationResponse{
    string operation = 1;
}

message GetBalanceRequest{
    string profileid = 1;
}

message GetBalanceResponse{
    double money = 1;
}

